# Logistic_regression_main

./: Makefile  README.md  preprocessing_pipeline_20250619_101636.pkl  preprocessing_pipeline_20250619_115117.pkl  preprocessing_pipeline_20250619_115729.pkl  preprocessing_pipeline_20250619_121144.pkl  preprocessing_pipeline_20250619_130152.pkl  pyproject.toml  pyvenv.cfg  requirements.txt
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy_streamlit.yml  model_monitoring.yml
artifacts/: preprocessing_pipeline.pkl
data/01_raw/: filtered_20250626_104543.csv
data/02_interim/: interim_preprocessed.csv  target_variable.csv
docs/: api.md  setup.md
infrastructure/: Dockerfile
infrastructure/requirements/: base.txt  streamlit.txt
scripts/: run_tests.sh  setup_environment.sh
src/config/: __init__.py  paths.py  settings.py
src/core/: __init__.py
src/core/data_loader/: __init__.py  loader.py  validator.py
src/models/: dummy_logistic_model.pkl  logistic_model_20250620_125739.joblib  logistic_model_20250620_125739.onnx  logistic_model_20250620_125739.pkl  logistic_model_20250620_125739.pt  logistic_model_20250620_132316.joblib  logistic_model_20250620_132316.onnx  logistic_model_20250620_132316.pkl  logistic_model_20250620_132316.pt  logistic_model_20250620_151843.joblib  logistic_model_20250620_151843.onnx  logistic_model_20250620_151843.pkl  logistic_model_20250620_151843.pt
src/utils/: __init__.py  helpers.py  logging.py
tests/: conftest.py  test_data_loading.py  test_inference.py  test_preprocessing.py
(+41 files in other folders)
